// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getFormValuesByHaku returns correct form values given different hakulomake variations 1`] = `
{
  "aikataulut": {
    "aikataulu": [
      {
        "alkaa": "2019-02-20T12:28",
        "paattyy": "2019-08-01T12:45",
      },
    ],
    "ajankohtaKaytossa": true,
    "ajankohtaTyyppi": "alkamiskausi ja -vuosi",
    "ajastettuHaunJaHakukohteidenArkistointi": "2019-11-16T09:44",
    "ajastettuJulkaisu": "2020-01-20T05:00",
    "hakuaika": [
      {
        "alkaa": "2019-03-29T12:28",
        "paattyy": "2019-09-29T12:30",
      },
    ],
    "henkilokohtaisenSuunnitelmanLisatiedot": {},
    "kausi": "alkamiskausi_1#1",
    "lisaamisenTakaraja": "2019-03-29T12:28",
    "muokkauksenTakaraja": "2019-03-11T09:45",
    "tarkkaAlkaa": null,
    "tarkkaPaattyy": null,
    "vuosi": {
      "value": "2020",
    },
  },
  "externalId": "ext1",
  "hakukohteenLiittajaOrganisaatiot": [],
  "hakulomake": {
    "kuvaus": {},
    "linkki": {
      "fi": "https://google.fi",
    },
    "lomake": {},
    "tyyppi": "muu",
  },
  "hakutapa": "hakutapa_1#1",
  "kieliversiot": [
    "fi",
    "sv",
  ],
  "kohdejoukko": {
    "kohdejoukko": "kohdejoukko_1#1",
    "tarkenne": {
      "value": "tarkenne_1#1",
    },
  },
  "muokkaaja": "1.1.1.1",
  "nimi": {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "organisaatioOid": undefined,
  "tila": "tallennettu",
  "yhteyshenkilot": [
    {
      "nimi": {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "puhelinnumero": {
        "fi": "Fi puhelinnumero",
        "sv": "Sv puhelinnumero",
      },
      "sahkoposti": {
        "fi": "Fi sähköposti",
        "sv": "Sv sähköposti",
      },
      "titteli": {
        "fi": "Fi titteli",
        "sv": "Sv titteli",
      },
      "verkkosivu": {
        "fi": "Fi verkkosivu",
        "sv": "Sv verkkosivu",
      },
      "verkkosivuTeksti": {},
    },
  ],
}
`;

exports[`getFormValuesByHaku returns correct form values given different hakulomake variations 2`] = `
{
  "aikataulut": {
    "aikataulu": [
      {
        "alkaa": "2019-02-20T12:28",
        "paattyy": "2019-08-01T12:45",
      },
    ],
    "ajankohtaKaytossa": true,
    "ajankohtaTyyppi": "alkamiskausi ja -vuosi",
    "ajastettuHaunJaHakukohteidenArkistointi": "2019-11-16T09:44",
    "ajastettuJulkaisu": "2020-01-20T05:00",
    "hakuaika": [
      {
        "alkaa": "2019-03-29T12:28",
        "paattyy": "2019-09-29T12:30",
      },
    ],
    "henkilokohtaisenSuunnitelmanLisatiedot": {},
    "kausi": "alkamiskausi_1#1",
    "lisaamisenTakaraja": "2019-03-29T12:28",
    "muokkauksenTakaraja": "2019-03-11T09:45",
    "tarkkaAlkaa": null,
    "tarkkaPaattyy": null,
    "vuosi": {
      "value": "2020",
    },
  },
  "externalId": "ext1",
  "hakukohteenLiittajaOrganisaatiot": [],
  "hakulomake": {
    "kuvaus": {
      "fi": "<p>kuvaus</p>",
    },
    "linkki": {},
    "lomake": {},
    "tyyppi": "ei sähköistä",
  },
  "hakutapa": "hakutapa_1#1",
  "kieliversiot": [
    "fi",
    "sv",
  ],
  "kohdejoukko": {
    "kohdejoukko": "kohdejoukko_1#1",
    "tarkenne": {
      "value": "tarkenne_1#1",
    },
  },
  "muokkaaja": "1.1.1.1",
  "nimi": {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "organisaatioOid": undefined,
  "tila": "tallennettu",
  "yhteyshenkilot": [
    {
      "nimi": {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "puhelinnumero": {
        "fi": "Fi puhelinnumero",
        "sv": "Sv puhelinnumero",
      },
      "sahkoposti": {
        "fi": "Fi sähköposti",
        "sv": "Sv sähköposti",
      },
      "titteli": {
        "fi": "Fi titteli",
        "sv": "Sv titteli",
      },
      "verkkosivu": {
        "fi": "Fi verkkosivu",
        "sv": "Sv verkkosivu",
      },
      "verkkosivuTeksti": {},
    },
  ],
}
`;

exports[`getFormValuesByHaku returns correct form values given haku 1`] = `
{
  "aikataulut": {
    "aikataulu": [
      {
        "alkaa": "2019-02-20T12:28",
        "paattyy": "2019-08-01T12:45",
      },
    ],
    "ajankohtaKaytossa": true,
    "ajankohtaTyyppi": "alkamiskausi ja -vuosi",
    "ajastettuHaunJaHakukohteidenArkistointi": "2019-11-16T09:44",
    "ajastettuJulkaisu": "2020-01-20T05:00",
    "hakuaika": [
      {
        "alkaa": "2019-03-29T12:28",
        "paattyy": "2019-09-29T12:30",
      },
    ],
    "henkilokohtaisenSuunnitelmanLisatiedot": {},
    "kausi": "alkamiskausi_1#1",
    "lisaamisenTakaraja": "2019-03-29T12:28",
    "muokkauksenTakaraja": "2019-03-11T09:45",
    "tarkkaAlkaa": null,
    "tarkkaPaattyy": null,
    "vuosi": {
      "value": "2020",
    },
  },
  "externalId": "ext1",
  "hakukohteenLiittajaOrganisaatiot": [],
  "hakulomake": {
    "kuvaus": {},
    "linkki": {},
    "lomake": {
      "value": "12345",
    },
    "tyyppi": "ataru",
  },
  "hakutapa": "hakutapa_1#1",
  "kieliversiot": [
    "fi",
    "sv",
  ],
  "kohdejoukko": {
    "kohdejoukko": "kohdejoukko_1#1",
    "tarkenne": {
      "value": "tarkenne_1#1",
    },
  },
  "muokkaaja": "1.1.1.1",
  "nimi": {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "organisaatioOid": undefined,
  "tila": "tallennettu",
  "yhteyshenkilot": [
    {
      "nimi": {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "puhelinnumero": {
        "fi": "Fi puhelinnumero",
        "sv": "Sv puhelinnumero",
      },
      "sahkoposti": {
        "fi": "Fi sähköposti",
        "sv": "Sv sähköposti",
      },
      "titteli": {
        "fi": "Fi titteli",
        "sv": "Sv titteli",
      },
      "verkkosivu": {
        "fi": "Fi verkkosivu",
        "sv": "Sv verkkosivu",
      },
      "verkkosivuTeksti": {},
    },
  ],
}
`;

exports[`getFormValuesByHaku toteutuksen ajankohta - Aloitus henkilokohtaisen suunnitelman mukaisesti 1`] = `
{
  "aikataulut": {
    "aikataulu": [
      {
        "alkaa": "2019-02-20T12:28",
        "paattyy": "2019-08-01T12:45",
      },
    ],
    "ajankohtaKaytossa": true,
    "ajankohtaTyyppi": "henkilokohtainen suunnitelma",
    "ajastettuHaunJaHakukohteidenArkistointi": "2019-11-16T09:44",
    "ajastettuJulkaisu": "2020-01-20T05:00",
    "hakuaika": [
      {
        "alkaa": "2019-03-29T12:28",
        "paattyy": "2019-09-29T12:30",
      },
    ],
    "henkilokohtaisenSuunnitelmanLisatiedot": {
      "en": "<p>hlokoht en </p>",
      "fi": "<p>hlokoht fi </p>",
      "sv": "<p>hlokoht sv </p>",
    },
    "kausi": null,
    "lisaamisenTakaraja": "2019-03-29T12:28",
    "muokkauksenTakaraja": "2019-03-11T09:45",
    "tarkkaAlkaa": null,
    "tarkkaPaattyy": null,
    "vuosi": undefined,
  },
  "externalId": "ext1",
  "hakukohteenLiittajaOrganisaatiot": [],
  "hakulomake": {
    "kuvaus": {},
    "linkki": {},
    "lomake": {
      "value": "12345",
    },
    "tyyppi": "ataru",
  },
  "hakutapa": "hakutapa_1#1",
  "kieliversiot": [
    "fi",
    "sv",
  ],
  "kohdejoukko": {
    "kohdejoukko": "kohdejoukko_1#1",
    "tarkenne": {
      "value": "tarkenne_1#1",
    },
  },
  "muokkaaja": "1.1.1.1",
  "nimi": {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "organisaatioOid": undefined,
  "tila": "tallennettu",
  "yhteyshenkilot": [
    {
      "nimi": {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "puhelinnumero": {
        "fi": "Fi puhelinnumero",
        "sv": "Sv puhelinnumero",
      },
      "sahkoposti": {
        "fi": "Fi sähköposti",
        "sv": "Sv sähköposti",
      },
      "titteli": {
        "fi": "Fi titteli",
        "sv": "Sv titteli",
      },
      "verkkosivu": {
        "fi": "Fi verkkosivu",
        "sv": "Sv verkkosivu",
      },
      "verkkosivuTeksti": {},
    },
  ],
}
`;

exports[`getFormValuesByHaku toteutuksen ajankohta - Tarkka alkamisaika 1`] = `
{
  "aikataulut": {
    "aikataulu": [
      {
        "alkaa": "2019-02-20T12:28",
        "paattyy": "2019-08-01T12:45",
      },
    ],
    "ajankohtaKaytossa": true,
    "ajankohtaTyyppi": "tarkka alkamisajankohta",
    "ajastettuHaunJaHakukohteidenArkistointi": "2019-11-16T09:44",
    "ajastettuJulkaisu": "2020-01-20T05:00",
    "hakuaika": [
      {
        "alkaa": "2019-03-29T12:28",
        "paattyy": "2019-09-29T12:30",
      },
    ],
    "henkilokohtaisenSuunnitelmanLisatiedot": {},
    "kausi": "alkamiskausi_1#1",
    "lisaamisenTakaraja": "2019-03-29T12:28",
    "muokkauksenTakaraja": "2019-03-11T09:45",
    "tarkkaAlkaa": "2030-12-20T12:28",
    "tarkkaPaattyy": "2030-12-21T12:28",
    "vuosi": {
      "value": "2030",
    },
  },
  "externalId": "ext1",
  "hakukohteenLiittajaOrganisaatiot": [],
  "hakulomake": {
    "kuvaus": {},
    "linkki": {},
    "lomake": {
      "value": "12345",
    },
    "tyyppi": "ataru",
  },
  "hakutapa": "hakutapa_1#1",
  "kieliversiot": [
    "fi",
    "sv",
  ],
  "kohdejoukko": {
    "kohdejoukko": "kohdejoukko_1#1",
    "tarkenne": {
      "value": "tarkenne_1#1",
    },
  },
  "muokkaaja": "1.1.1.1",
  "nimi": {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "organisaatioOid": undefined,
  "tila": "tallennettu",
  "yhteyshenkilot": [
    {
      "nimi": {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "puhelinnumero": {
        "fi": "Fi puhelinnumero",
        "sv": "Sv puhelinnumero",
      },
      "sahkoposti": {
        "fi": "Fi sähköposti",
        "sv": "Sv sähköposti",
      },
      "titteli": {
        "fi": "Fi titteli",
        "sv": "Sv titteli",
      },
      "verkkosivu": {
        "fi": "Fi verkkosivu",
        "sv": "Sv verkkosivu",
      },
      "verkkosivuTeksti": {},
    },
  ],
}
`;
